--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@
     <head>
         <title>NKY5223</title>
         <link rel="icon" href="https://github.githubassets.com/favicons/favicon.svg" />
+        <link rel="stylesheet" href="style.css" />
     </head>
+    <body>
+        <h1>&nbsp;- My Stuff -&nbsp;</h1>
+        <a class="stuff" href="https://nky5223.github.io/SkapClient" target="_blank">SkapClient</a>
+        <p>Wow, such empty<br>&lt;img src="reddit.com/resources/images/emptycat.png" /&gt;</p>
+    </body>
 </html>
