--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1>&nbsp;- My Stuff -&nbsp;</h1>
         <a class="stuff" href="https://nky5223.github.io/SkapClient" target="_blank">SkapClient</a>
+        <a class="stuff" href="https://nky5223.github.io">Github Pages</a>
         <p>Wow, such empty<br>&lt;img src="reddit.com/resources/images/emptycat.png" /&gt;</p>
     </body>
 </html>
