--- a/index.html
+++ b/index.html
@@ -3,13 +3,38 @@
     <head>
         <title>NKY5223</title>
         <link rel="icon" href="https://github.githubassets.com/favicons/favicon.svg" />
-        <link rel="stylesheet" href="style.css" />
+        <style>
+            html {
+                font-family: Consolas, monospace;
+                color: #ffffff;
+            }
+            body {
+                display: flex;
+                align-items: center;
+                background: #404040;
+                flex-direction: column;
+            }
+            h1 {
+                color: #00ff00;
+                text-decoration: double underline;
+            }
+            .stuff {
+                border: 5px solid #202020;
+                border-radius: 5px;
+                margin: 5px 0;
+                padding: 10px 15px;
+            }
+            a {
+                color: #ffffff;
+                text-decoration: none;
+            }
+        </style>
     </head>
     <body>
         <h1>&nbsp;- My Stuff -&nbsp;</h1>
         <a class="stuff" href="https://nky5223.github.io/SkapClient" target="_blank">SkapClient</a>
         <a class="stuff" href="https://nky5223.github.io">Github Pages</a>
-        <a class="stuff" href="https://nky5223.github.io/SkapBots" target="_blank">Github Pages</a>
+        <a class="stuff" href="https://nky5223.github.io/SkapBots" target="_blank">SkapBots</a>
         <p>Wow, such empty<br>&lt;img src="reddit.com/resources/images/emptycat.png" /&gt;</p>
     </body>
 </html>
