--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             }
             body {
                 display: flex;
+                text-align: center;
                 align-items: center;
                 background: #404040;
                 flex-direction: column;
