--- a/404.html
+++ b/404.html
@@ -37,6 +37,9 @@
     </head>
     <body>
         <a href="https://nky5223.github.io" title="Back Home"><h1>404</h1></a>
-        <p>Not Found :/</p>
+        <p>
+            Not Found<br>
+            <small>Oof?</small>
+        </p>
     </body>
 </html>
