--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
                 text-decoration: double underline;
             }
             .stuff {
-                border: 5px solid #202020;
-                border-radius: 5px;
                 margin: 5px 0;
                 padding: 10px 15px;
             }
@@ -35,7 +33,7 @@
         <h1>&nbsp;- My Stuff -&nbsp;</h1>
         <a class="stuff" href="https://nky5223.github.io/SkapClient" target="_blank">SkapClient</a>
         <a class="stuff" href="https://nky5223.github.io">Github Pages</a>
-        <a class="stuff" href="https://nky5223.github.io/SkapBots" target="_blank">SkapBots</a>
-        <p>Wow, such empty<br>&lt;img src="reddit.com/resources/images/emptycat.png" /&gt;</p>
+        <a class="stuff" href="https://nky5223.github.io/Mandelbrot" target="_blank">Mandelbrot Set</a>
+        <a class="stuff" href="https://nky5223.github.io/Julia" target="_blank"><del>Julia</del> Romeo Set</a>
     </body>
 </html>
