--- a/index.html
+++ b/index.html
@@ -19,21 +19,20 @@
                 color: #00ff00;
                 text-decoration: double underline;
             }
-            .stuff {
-                margin: 5px 0;
-                padding: 10px 15px;
-            }
             a {
                 color: #ffffff;
                 text-decoration: none;
+            }
+            a:hover {
+                text-decoration: underline;
             }
         </style>
     </head>
     <body>
         <h1>&nbsp;- My Stuff -&nbsp;</h1>
-        <a class="stuff" href="https://nky5223.github.io/SkapClient" target="_blank">SkapClient</a>
-        <a class="stuff" href="https://nky5223.github.io">Github Pages</a>
-        <a class="stuff" href="https://nky5223.github.io/Mandelbrot" target="_blank">Mandelbrot Set</a>
-        <a class="stuff" href="https://nky5223.github.io/Julia" target="_blank"><del>Julia</del> Romeo Set</a>
+        <a href="https://nky5223.github.io/SkapClient" target="_blank">SkapClient</a><br>
+        <a href="https://nky5223.github.io">Github Pages</a><br>
+        <a href="https://nky5223.github.io/Mandelbrot" target="_blank">Mandelbrot Set</a><br>
+        <a href="https://nky5223.github.io/Julia" target="_blank"><del>Julia</del> Romeo Set</a>
     </body>
 </html>
