--- a/index.html
+++ b/index.html
@@ -2,37 +2,12 @@
 <html>
     <head>
         <title>NKY5223</title>
-        <link rel="icon" href="https://github.githubassets.com/favicons/favicon.svg" />
-        <style>
-            html {
-                font-family: Consolas, monospace;
-                color: #ffffff;
-            }
-            body {
-                display: flex;
-                text-align: center;
-                align-items: center;
-                background: #404040;
-                flex-direction: column;
-            }
-            h1 {
-                color: #00ff00;
-                text-decoration: double underline;
-            }
-            a {
-                color: #ffffff;
-                text-decoration: none;
-            }
-            a:hover {
-                text-decoration: underline;
-            }
-        </style>
+        <link rel="icon" href="images/favicon.png" />
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>&nbsp;- My Stuff -&nbsp;</h1>
-        <a href="https://nky5223.github.io/SkapClient" target="_blank">SkapClient</a><br>
-        <a href="https://nky5223.github.io">Github Pages</a><br>
-        <a href="https://nky5223.github.io/Mandelbrot" target="_blank">Mandelbrot Set</a><br>
-        <a href="https://nky5223.github.io/Julia" target="_blank"><del>Julia</del> Romeo Set</a>
+        <a href="/SkapClient" target="_blank">SkapClient</a><br>
+        <a href="/colorful-levelcodes" target="_blank">Colorful Levelcodes (for CMMM Discord)</a><br>
     </body>
 </html>
