reformat! very epic

--- a/index.html
+++ b/index.html
@@ -6,8 +6,25 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>&nbsp;- My Stuff -&nbsp;</h1>
-        <a href="/SkapClient" target="_blank">SkapClient</a><br>
-        <a href="/colorful-levelcodes" target="_blank">Colorful Levelcodes (for CMMM Discord)</a><br>
+        <h1>NKY's Projects:</h1>
+        <div class="section right">
+            <a href="SkapClient" target="_blank"><img src="images/skapclient-preview.png" /></a>
+            <div class="description">
+                <h2><a href="SkapClient" target="_blank">SkapClient</a></h2>
+                <p>
+                    A client for <a href="https://skap.io">Skap</a> with additional features such as advanced hitboxes, power presets and more!
+                </p>
+            </div>
+        </div>
+        <div class="section left">
+            <a href="colorful-levelcodes" target="_blank"><img src="images/colorful-levelcodes-preview.png" /></a>
+            <div class="description">
+                <h2><a href="colorful-levelcodes" target="_blank">Colorful Levelcodes</a></h2>
+                <p>
+                    A tool to make your <a href="https://themysticlynx.itch.io/cell-machine-mystic-mod" target="_blank">Cell Machine Mystic Mod</a> Levelcodes pop! 
+                    (formats work only in <a href="https://discord.com" target="_blank">Discord</a>)
+                </p>
+            </div>
+        </div>
     </body>
 </html>
