--- a/index.html
+++ b/index.html
@@ -26,5 +26,14 @@
                 </p>
             </div>
         </div>
+        <div class="section right">
+            <a href="fourier-transform" target="_blank"><img src="images/fourier-preview.png" /></a>
+            <div class="description">
+                <h2><a href="Fourier" target="_blank">Fourier</a></h2>
+                <p>
+                    Fourier Transform.
+                </p>
+            </div>
+        </div>
     </body>
 </html>
