--- a/404.html
+++ b/404.html
@@ -5,12 +5,12 @@
         <style>
             html, body {
                 height: 100%;
-                font: bold 30px Verdana;
+                font: bold 30px Consolas, monospace;
                 color: #ffffff;
             }
             body {
                 margin: 0;
-                background: #404040;
+                background: #000000;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -20,7 +20,7 @@
                 text-decoration: none;
             }
             h1 {
-                color: #404040;
+                color: #000000;
                 -webkit-text-stroke: #ffffff 5px;
                 text-align: center;
                 margin: 0;
@@ -37,9 +37,5 @@
     </head>
     <body>
         <a href="https://nky5223.github.io" title="Back Home"><h1>404</h1></a>
-        <p>
-            Not Found<br>
-            <small>Oof?</small>
-        </p>
     </body>
 </html>
