--- a/404.html
+++ b/404.html
@@ -27,8 +27,9 @@
                 user-select: none;
                 -webkit-user-select: none;
                 -moz-user-select: none;
-                width: 100%;
+                height: 200px;
                 font-size: 300px;
+                line-height: 175px;
             }
             h1:hover {
                 color: #ffffff;
@@ -36,6 +37,7 @@
         </style>
     </head>
     <body>
-        <a href="https://nky5223.github.io" title="Back Home"><h1>404</h1></a>
+        <a href="./" title="Back Home"><h1>404</h1></a>
+        <span style="color: red;">Not Found.</span>
     </body>
 </html>
