--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <body>
         <h1>NKY's Projects:</h1>
         <div class="section right">
-            <a href="SkapClient" target="_blank"><img src="images/skapclient-preview.png" /></a>
+            <a href="/SkapClient" target="_blank"><img src="images/skapclient-preview.png" /></a>
             <div class="description">
-                <h2><a href="SkapClient" target="_blank">SkapClient</a></h2>
+                <h2><a href="/SkapClient" target="_blank">SkapClient</a></h2>
                 <p>
                     A client for <a href="https://skap.io">Skap</a> with additional features such as advanced hitboxes, power presets and more!
                 </p>
             </div>
         </div>
         <div class="section left">
-            <a href="colorful-levelcodes" target="_blank"><img src="images/colorful-levelcodes-preview.png" /></a>
+            <a href="/colorful-levelcodes" target="_blank"><img src="images/colorful-levelcodes-preview.png" /></a>
             <div class="description">
                 <h2><a href="colorful-levelcodes" target="_blank">Colorful Levelcodes</a></h2>
                 <p>
@@ -27,9 +27,9 @@
             </div>
         </div>
         <div class="section right">
-            <a href="fourier-transform" target="_blank"><img src="images/fourier-preview.png" /></a>
+            <a href="/fourier-transform" target="_blank"><img src="images/fourier-preview.png" /></a>
             <div class="description">
-                <h2><a href="Fourier" target="_blank">Fourier</a></h2>
+                <h2><a href="/Fourier" target="_blank">Fourier</a></h2>
                 <p>
                     Fourier Transform.
                 </p>
