--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="section right">
             <a href="/fourier-transform" target="_blank"><img src="images/fourier-preview.png" /></a>
             <div class="description">
-                <h2><a href="/Fourier" target="_blank">Fourier</a></h2>
+                <h2><a href="/fourier-transform" target="_blank">Fourier</a></h2>
                 <p>
                     Fourier Transform.
                 </p>
