--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="section right">
             <a href="/SkapClient" target="_blank"><img src="images/skapclient-preview.png" /></a>
             <div class="description">
-                <h2><a href="/SkapClient" target="_blank">SkapClient</a></h2>
+                <h2><a href="/SkapClient" target="_blank"><img src="/SkapClient/skapclient.svg"> SkapClient</a></h2>
                 <p>
                     A client for <a href="https://skap.io">Skap</a> with additional features such as advanced hitboxes, power presets and more!
                 </p>
@@ -29,7 +29,7 @@
         <div class="section right">
             <a href="/fourier-transform" target="_blank"><img src="images/fourier-preview.png" /></a>
             <div class="description">
-                <h2><a href="/fourier-transform" target="_blank">Fourier</a></h2>
+                <h2><a href="/fourier-transform" target="_blank"><img src="/fourier-transform/icon.png">Fourier</a></h2>
                 <p>
                     Fourier Transform.
                 </p>
