--- a/404.html
+++ b/404.html
@@ -1,43 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>404 Not Found</title>
-        <style>
-            html, body {
-                height: 100%;
-                font: bold 30px Consolas, monospace;
-                color: #ffffff;
-            }
-            body {
-                margin: 0;
-                background: #000000;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-            }
-            a {
-                text-decoration: none;
-            }
-            h1 {
-                color: #000000;
-                -webkit-text-stroke: #ffffff 5px;
-                text-align: center;
-                margin: 0;
-                user-select: none;
-                -webkit-user-select: none;
-                -moz-user-select: none;
-                height: 200px;
-                font-size: 300px;
-                line-height: 175px;
-            }
-            h1:hover {
-                color: #ffffff;
-            }
-        </style>
+        <title>Error 404: Page Not Found</title>
+        <link rel="stylesheet" href="404/style.css">
     </head>
     <body>
-        <a href="./" title="Back Home"><h1>404</h1></a>
-        <span style="color: red;">Not Found.</span>
+        <canvas id="canvas">HTML Canvas Not Supported >:(</canvas>
+        <div style="position: relative; width: 50%; height: 50%; pointer-events: none;">
+            <p id="left">Error</p>
+            <p id="right">Page Not Found</p>
+        </div>
+        <script src="404/particle.js"></script>
+        <script src="404/index.js"></script>
     </body>
 </html>
